Remove .isBlank(), replace with .trim().isEmpty()